improve log-form spacing issues

--- a/style.css
+++ b/style.css
@@ -81,8 +81,8 @@ img.sidebar-logo {
     justify-content: center;
     background-color: #f9f9f9;
     background-color: #f5f5f5;
-    
-    
+
+
 }
 
 .log-section>* {
@@ -95,7 +95,7 @@ img.sidebar-logo {
     flex-direction: column;
     font-weight: bold;
     width: 100%;
-    
+
 }
 
 .quote-text {
@@ -104,11 +104,13 @@ img.sidebar-logo {
     font-size: 1.5rem;
     left: 3rem;
     bottom: 2rem;
-    
-  
+
+
 }
 
 .log-form {
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     padding: 3rem;
@@ -116,5 +118,25 @@ img.sidebar-logo {
     margin-bottom: 32px;
     border-radius: 8px;
     width: 100%;
-  }
+}
 
+
+
+form {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+/*Select all form children*/
+form>* {
+    display: flex;
+    flex: 1;
+    gap: 4rem`;
+}
+
+
+
+label {
+    display: block;
+}
